kubernetes/main/apps/dev/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    goldilocks.fairwinds.com/enabled: "true"
annotations:
  kustomize.toolkit.fluxcd.io/prune: disabled
